<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="branislav.gamf.chatapplication.ContactsActivity"
    >

    <Button
        android:id="@+id/logoutButton1"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/refreshButton"
        android:text="@string/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/logoutButton1"
        />

    <TextView
        android:id="@+id/myChatList"
        android:text="@string/myChatList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/logoutButton1"
        android:gravity="center"
        />

    <ListView
        android:id="@+id/customListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myChatList"
        android:layout_alignParentLeft="true"
        ></ListView>


</RelativeLayout>